# -SPHERExMiner

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_arcturus_deep_injrec.sh  run_depth_g11p5_13p0.sh  run_depth_g12p5_14p0_profile.sh  run_gaia_lite_full_build.sh  spherex_field_miner_codex_spec.md  watch_gaia_lite_build.sh
LLMfilter/: README.md  anonymized_gemini_eval.py  llm_filter_experiment.py
configs/: blind_candidate_quality.yaml  blind_candidate_quality_injection.yaml  campaign_with_ml_transformer.yaml  castro_valley_june_survey_targets.yaml  manual_targets.yaml
docs/: arcturus_deep_injection_pipeline.md  arcturus_magnitude_calibration_notes.md  blind_candidate_quality_scoring.md  gaia_cache_cold_start.md  gpu_narrowband_detector_spec.md  gpu_psf_grid_notes.md  gpu_response_template_scorer.md  grid_science_embeddings.md  how_to_run_system.md  injection_recovery_plan.md  interesting_targets.md  local_gaia_lite_spec.md  ml_two_model_plan.md  narrowband_ml_training_log.md  next_generation_blind_object_miner.md  operator_runbook.md  project_identity.md  twomass_cache_cold_start.md  visible_sky_injection_campaign.md
fits_inspector_app/: README.md  server.py
grid_survey_v1/: README.md
luxquarry_allsky_engine/: .dockerignore  .gitignore  README.md  pyproject.toml
luxquarry_allsky_engine/container/: Dockerfile  README.md
luxquarry_allsky_engine/docs/: architecture.md  benchmark_log.md  benchmark_plan.md  cuda_and_rapids_strategy.md  eks_plan.md  gpu_worker_dispatch.md  implementation_plan.md  local_environment.md  s3_and_postprocess_plan.md  survey_output_contract.md  worker_service_design.md
luxquarry_allsky_engine/src/luxquarry_allsky_engine/: __init__.py  benchmark.py  calibration.py  campaign.py  candidate_fanout.py  catalog.py  cli.py  dispatch.py  finalize.py  gpu_worker.py  kubernetes.py  local_runner.py  manifest.py  object_store.py  perf_report.py  photometry.py  projection.py  recovery.py  reducer.py  scoring.py  spectra.py  staging_benchmark.py  status.py  survey_depth.py  survey_economics.py  target_inflation.py  task_queue.py  warp_aperture.py  warp_psf.py
ml/: README.md  __init__.py  requirements.txt
spherex_laser_miner/: cache.py  calibration.py  cli.py  coarse_status.py  config.py  coordinates.py  downloader.py  field_eval.py  field_worker.py  gpu_psf_cli.py  live_status.py  qa.py  spectra.py  viewer.py
tests/: test_coordinates.py
tools/: backfill_raw_blind_scans.py  blind_scan_matched_filter.py  blink_injection_viewer.py  build_2mass_parquet.py  build_narrowband_calibration.py  build_simulator_spectra.py  compare_psf_photometry.py  (+30 more)
(+73 files in other folders)
