[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherex-laser-miner"
version = "0.1.0"
description = "Field-first SPHEREx forced-photometry miner for narrowband excess searches."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "astropy>=6.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "photutils>=1.13",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pyvo>=1.5",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.12",
  "s3fs>=2025.12.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
spherex-mine = "spherex_laser_miner.cli:app"

[tool.setuptools.packages.find]
include = ["spherex_laser_miner*"]

[tool.ruff]
line-length = 100
target-version = "py312"
