[project]
name = "luxquarry-allsky-engine"
version = "0.1.0"
description = "Frame-first GPU survey engine prototype for SPHEREx mining."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
luxquarry-allsky = "luxquarry_allsky_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

