[project]
name = "luxquarry-allsky-engine"
version = "0.1.0"
description = "Frame-first GPU survey engine prototype for SPHEREx mining."
requires-python = ">=3.11"
dependencies = [
  "astropy>=8",
  "astropy-healpix>=1.1",
  "duckdb>=1.5",
  "numpy>=2",
  "pandas>=3",
  "pyarrow>=24",
]

[project.scripts]
luxquarry-allsky = "luxquarry_allsky_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
