[project]
name = "luxquarry-allsky-engine"
version = "0.1.0"
description = "Frame-first GPU survey engine prototype for SPHEREx mining."
requires-python = ">=3.11"
dependencies = [
  "astropy>=8",
  "astropy-healpix>=1.1",
  "cudf-cu12>=26.6,<26.7",
  "cupy-cuda12x>=14.1,<15",
  "dask-cudf-cu12>=26.6,<26.7",
  "duckdb>=1.5",
  "kvikio-cu12>=26.6,<26.7",
  "numpy>=2",
  "pandas>=2.3,<2.4",
  "pyarrow>=23,<24",
  "rmm-cu12>=26.6,<26.7",
  "scipy>=1.12",
  "warp-lang>=1.14",
]

[project.scripts]
luxquarry-allsky = "luxquarry_allsky_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
